# PyLACS

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  release.sh  requirements.txt
.github/workflows/: continuous_integration.yml
doc/: index.rst
pylacs/: MANIFEST.in  Pylacs_results.csv  README.md  lacs.py  pyproject.toml  random_coil.py
pylacs/docs/: citation.rst  conf.py  examples.rst  getting_started.rst  index.rst  methodology.rst  outputs.rst  overview.rst  refs.bib  release-notes.rst  requirements.txt  theory.rst  usage.rst  validation.rst
pylacs/docs/_static/: 4998_bayes.json  4998_bayes.star
pylacs/docs/api/: modules.rst  pylacs.apply_lacs_correction.rst  pylacs.cli.rst  pylacs.lacs.rst  pylacs.random_coil.rst
pylacs/src/: lacs.py  random_coil.py
pylacs/src/pylacs/: __init__.py  __main__.py  apply_lacs_correction.py  cli.py  lacs.py  random_coil.py
pylacs/tests/: conftest.py  test_lacs.py  test_random_coil.py
scripts/: Table_S1_clean.csv  add_offset.py  amide_n_regression.py  apply_correction.py  apply_lacs_correction.py  benchmark.py  bmrb_multi_shift_lists.py  calculate_entropy.py  carbonyl_regression.py  collect_results.py  generate_condor_jobs.py  lacs.py  lacs_NH.py  lacs_condor.sub  offsets_c.csv  offsets_ca.csv  offsets_cb.csv  offsets_ha.csv  offsets_n.csv  panav_out_parser.py  parse_json_files.py  plot_results.py  pylacs.sh  pylacs2.sh  random_corr_offset.py  read_json.py  read_json2.py  read_refdb_file.py  results.csv  run_lacs.py  split_bmrb_file.py  split_chemical_shilft_lists.py  ss_analysis.py  test.py  wrong_ref.txt
