[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylacs"
version = "0.1.0"
description = "Robust LACS offsets, uncertainties, outliers, and plots from NMR-STAR files"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Kumaran Baskaran", email = "kumar.physics@gmail.com" }
]
keywords = ["NMR", "chemical shifts", "LACS", "referencing", "biomolecular"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Biochemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

# Install EVERYTHING by default (no extras required)
dependencies = [
  "numpy>=1.22",
  "pynmrstar>=3.0.0",
  # plotting
  "plotly>=5",
  "kaleido>=0.2",
  # robust frequentist methods
  "statsmodels>=0.13",
  "scikit-learn>=1.0",
  # transitive helpers commonly required by the above
  "scipy>=1.8",
  "pandas>=1.5",
  # Bayesian Student-t
  "pymc>=5",
  "arviz>=0.14",
]

[project.urls]
Homepage = "https://github.com/yourname/pylacs"
Issues = "https://github.com/yourname/pylacs/issues"

# Console script: `pylacs` runs main() in src/pylacs/lacs.py
[project.scripts]
pylacs = "pylacs.lacs:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
