[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylacs"
description = "Robust LACS offsets, uncertainties, outliers, and plots from NMR-STAR files"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Kumaran Baskaran", email = "kumar.physics@gmail.com" }
]
dynamic = ["version"]
keywords = ["NMR", "chemical shifts", "LACS", "referencing", "biomolecular"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

# Install EVERYTHING by default (no extras required)
dependencies = [
  "numpy>=2.1.1",
  "pynmrstar>=3.0.0",
  # plotting
  "plotly>=5",
  "kaleido>=0.2",
  # robust frequentist methods
  "statsmodels>=0.13",
  "scikit-learn>=1.0",
  # transitive helpers commonly required by the above
  "scipy>=1.8",
  "pandas>=1.5",
  # Bayesian Student-t
  "pymc>=5",
  "arviz>=0.14",
]

[project.urls]
Homepage = "https://github.com/kumar-physics/PyLACS"
Issues = "https://github.com/kumar-physics/PyLACS"

# Console script: `pylacs` runs main() in src/pylacs/lacs.py
[project.scripts]
pylacs = "pylacs.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = {attr = "pylacs.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
